<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Odhlasujto</string>
    <string name="action_about">About app</string>
    <string name="action_exit">Exit</string>

    <string name="CreatePoll">Create poll</string>
    <string name="Vote">Vote</string>
    <string name="Results">View results</string>
    <string name="aboutLabel">This application has been developed as a semestral project at FOEM CULS.\n It\'s simple voting tool.</string>
    <string name="aboutLabe2">More information can be found on our wiki:</string>
    <string name="aboutLink">https://bitbucket.org/Dan_Silhavy/mobiln-app-odhlasujto-java/wiki/Home</string>

    <!--TODO voteName === pollName?? + obecně bordel: pascalCase-->
    <string name="voteName">Poll name</string>
    <string name="voteDesc">Poll description</string>
    <string name="vote">Vote</string>

    <string name="lblBtnAdd">Add Option</string>
    <string name="txtEmpty">List is empty</string>
    <string name="poll_name_hint">Poll name</string>
    <string name="poll_desc_hint">Poll description</string>
    <string name="hintTxtItem">Enter new poll option here..</string>

    <string name="submit_vote">Submit vote</string>
    <string name="save_poll">Save poll</string>
    <string name="btnBack">Back</string>

    <string name="pollName">Poll name</string>
    <string name="option_name">Option Name</string>
    <string name="wifi_settings">Wi-Fi Settings</string>
    <string name="loading">Loading</string>
    <string name="basicInformation">New poll basic information</string>
    <string name="options">Options of the poll</string>
    <string name="emptyOptionName">Empty option name</string>
    <string name="chyba">Error!</string>
    <string name="chyba1">All items are mandatory!</string>
    <string name="chyba2">Option can not be empty!</string>
    <string name="createtab">Create</string>
    <string name="votetab">Vote</string>
    <string name="resultstab">Results</string>
    <string name="oznameni">Information</string>
    <string name="oznameni1">Device is online!</string>
    <string name="oznameni2">Device is not online!</string>
    <string name="lore">Lore ipsum</string>
    <string name="lore2">Testové hlasování</string>
    <string name="optionFlatus">Option 1</string>
    <string name="btnDownloadJSON">Download JSON</string>
    <string name="pollResults">Results of the poll</string>
    <string name="btnSQLite">View database</string>
    <string name="noPoll">No new poll created..</string>

</resources>
