<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/votePollName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pollName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:textSize="13sp"
        android:textStyle="italic"
         />

    <TextView
        android:id="@+id/votePollDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voteDesc"
        android:textSize="13sp"
        android:textStyle="italic"

        android:gravity="left"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/votePollName"
        android:layout_alignLeft="@+id/votePollName"
        android:layout_alignStart="@+id/votePollName" />

    <TextView
        android:id="@+id/pollNameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lore2"
        android:hint="@string/noPoll"
        android:textSize="18sp"
        android:textAlignment="gravity"

        android:gravity="left"
        android:elegantTextHeight="true"
        android:layout_below="@+id/votePollName"
        android:layout_alignLeft="@+id/votePollDesc"
        android:layout_alignStart="@+id/votePollDesc" />

    <TextView
        android:id="@+id/pollDescID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/lore"
        android:textAlignment="gravity"

        android:gravity="left"
        android:elegantTextHeight="true"
        android:layout_below="@+id/votePollDesc"
        android:layout_alignLeft="@+id/votePollDesc"
        android:layout_alignStart="@+id/votePollDesc" />

   <TextView
       android:id="@+id/optionName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/pollResults"
       android:textSize="14sp"

       android:layout_marginTop="18dp"
       android:layout_below="@+id/pollDescID"
       android:layout_alignLeft="@+id/pollDescID"
       android:layout_alignStart="@+id/pollDescID" />

    <ListView
        android:id="@+id/listResults"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/optionName"
        android:layout_above="@+id/SQLVIEWER"
        android:gravity="start"
        android:textSize="18sp"

        android:fastScrollEnabled="true"
        android:fastScrollAlwaysVisible="true"
        android:smoothScrollbar="true"
        android:drawSelectorOnTop="true"
        android:nestedScrollingEnabled="true"
        android:scrollingCache="true"

        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:layout_alignParentEnd="false"
        android:clickable="true"
        android:layout_margin="1dp"
        android:layout_marginTop="22dp">
        </ListView>

        <Button
            android:text="@string/btnSQLite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SQLVIEWER"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

</RelativeLayout>