<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <EditText
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:id="@+id/pollName"
        android:hint="@string/poll_name_hint"
        android:textStyle="italic"
        android:textSize="20sp" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/pollDesc"
        android:hint="@string/poll_desc_hint"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_below="@+id/pollName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtItem"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pollDesc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblBtnAdd"
        android:layout_below="@+id/txtItem"
        android:layout_alignParentLeft="true" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdd" />

    <Button
        android:id="@+id/savePollBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_poll"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>