<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_application"

    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutLabel"
        android:id="@+id/aboutTextView1"
        android:textStyle="italic"
        android:layout_margin="@dimen/standard_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutLabe2"
        android:id="@+id/aboutTextView2"
        android:layout_margin="@dimen/standard_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/aboutLink"
        android:id="@+id/aboutLink"
        android:layout_margin="@dimen/standard_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:autoLink="all"
        android:linksClickable="true" />
</LinearLayout>