<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voteName"
        android:id="@+id/votePollName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voteDesc"
        android:id="@+id/votePollDesc"
        android:textSize="20sp"
        android:layout_below="@+id/votePollName"
        android:layout_alignLeft="@+id/votePollName"
        android:layout_alignStart="@+id/votePollName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pollNameID"
        android:textSize="20sp"
        android:layout_above="@+id/votePollDesc"
        android:layout_toRightOf="@+id/votePollDesc"
        android:layout_toEndOf="@+id/votePollDesc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pollDescID"
        android:textSize="20sp"
        android:layout_above="@+id/gridLayout"
        android:layout_toRightOf="@+id/votePollDesc"
        android:layout_toEndOf="@+id/votePollDesc" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/votePollDesc"
        android:layout_centerHorizontal="true"
        android:columnCount="15"
        android:rowCount="1"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="137dp"
            android:layout_height="40dp"
            android:layout_columnSpan="2"
            android:id="@+id/optionID" />

        <ToggleButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/vote"
            android:id="@+id/optionVote"
            android:layout_row="0"
            android:layout_column="14" />


    </GridLayout>

    <Button
        android:id="@+id/btnSubmitVote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_vote"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>